<resources>
    <string name="app_name">mkst_robot</string>

    <string name="add_area">请输入区域名称</string>
    <string name="add_card">请输入系统卡名称</string>
    <string name="add_desk">请输入桌子名称</string>
    <string name="added_settings">已有指令</string>
    <string name="area">服务区域</string>
    <string name="btn_cancle">取消</string>
    <string name="btn_delete">删除</string>
    <string name="btn_sure">确定</string>
    <string name="card_address">磁条编码</string>
    <string name="card_list">系统卡列表</string>
    <string name="card_settings">系统卡编辑</string>
    <string name="change_area">请修改区域名称</string>
    <string name="choose_area">请选择区域</string>
    <string name="choose_robot">请选择执行的机器</string>
    <string name="command_deract">编辑命令</string>
    <string name="command_num">指令总数</string>
    <string name="command_settings">添加指令</string>
    <string name="command_state">指令状态</string>
    <string name="config_add">添加</string>
    <string name="config_redact">编辑</string>
    <string name="derail">脱轨运行</string>
    <string name="desk_add">添加桌子</string>
    <string name="desk_deract">编辑桌子</string>
    <string name="desk_settings">添加桌子</string>
    <string name="deskname">桌名</string>
    <string name="deskname_setting">设置</string>
    <string name="dining">嘟嘟送餐</string>
    <string name="direction">方向</string>
    <string name="electric">电量电压</string>
    <string name="excute_command">执行指令</string>
    <string name="excute_time">执行时间</string>
    <string name="goalname">站点</string>
    <string name="ip">IP地址</string>
    <string name="last_command_state">前指令状态</string>
    <string name="last_location">最后坐标</string>
    <string name="lockhook">锁牵引钩</string>
    <string name="main">首页</string>
    <string name="mp3">MP3通道</string>
    <string name="name">名称</string>
    <string name="name_setting">确认修改</string>
    <string name="obstacle">障碍物</string>
    <string name="outime">超时时间</string>
    <string name="outline">在线状态</string>
    <string name="puthook">放牵引钩</string>
    <string name="robot_settings">机器人编辑</string>
    <string name="robot_state">机器人状态</string>
    <string name="robot_state_">机器人状态</string>
    <string name="rotato">脱轨旋转</string>
    <string name="showcolor">显示颜色</string>
    <string name="shownum">显示编号</string>
    <string name="speed">速度</string>
    <string name="state">运动状态</string>
    <string name="straight">直行</string>
    <string name="wait">等待退出</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
</resources>
