<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/green">

        <Button
            android:id="@+id/setting_back"
            android:layout_width="17dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_back_selector" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/card_settings"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/btn_delete"
            android:textColor="@animator/btn_delete_selector"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="#333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/cardname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:hint="@string/add_card"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:text="@string/card_address"
            android:textColor="#333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/cardaddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="13dp"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="53dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@animator/btn_sure_selector"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>
