<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/green">

        <Button
            android:id="@+id/setting_back"
            android:layout_width="17dp"
            android:layout_height="21dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_back_selector" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/deskname_setting"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@color/green"
            android:text="@string/btn_delete"
            android:textColor="@animator/btn_delete_selector"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="设置桌名"
                android:textColor="#999999"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/deskname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center|left"
                    android:hint="*必填"
                    android:maxLength="3"
                    android:textColor="@color/black"
                    android:textColorHint="#666666"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/xyb" />

                <Button
                    android:id="@+id/change_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:text="@string/btn_sure"
                    android:textColor="@animator/btn_sure_desk_selector"
                    android:textSize="17sp"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/card_settings"
                android:textColor="#333333"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="7dp"
                android:layout_height="13dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@mipmap/xyb" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/command_settings"
                android:textColor="@color/desk_yellow"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/added_settings"
                android:textColor="#333333"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_tab_bottom_img"
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/desk_yellow"
            android:scaleType="matrix" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF" />
</LinearLayout>
