<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="200dp"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@mipmap/tck" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="区域修改"
            android:textColor="#666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/title_template"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:gravity="center"
            android:text="@string/add_area"
            android:textColor="#333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="17dp"
            android:background="@mipmap/srk"
            android:gravity="center"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textColorHint="#7D7D7D"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="22dp"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/btn_cancle"
                android:textColor="#666666"
                android:textSize="17sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#EEEEEE" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:text="@string/btn_sure"
                android:textColor="@color/origen"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>