<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/green">

        <Button
            android:id="@+id/setting_back"
            android:layout_width="17dp"
            android:layout_height="21dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_back_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/robot_settings"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/sure"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/btn_sure"
            android:textColor="@animator/btn_delete_selector"
            android:textSize="17sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:background="#EEEEEE"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#999999"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center|left"
                android:maxLength="5"
                android:paddingLeft="10dp"
                android:textColor="#666666"
                android:textSize="@dimen/robot_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:background="#EEEEEE"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/area"
                android:textColor="#999999"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <TextView
                    android:id="@+id/area_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="区域"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="25dp"
                    android:gravity="center"
                    android:text="必选"
                    android:textColor="#999999"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="7dp"
                    android:layout_height="13dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="6dp"
                    android:background="@mipmap/xyb"
                    android:text="必选"
                    android:textColor="#999999"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
